# i-need-an-image

./: README.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-package.yml
engines/: __init__.py  bing.py
need_an_image/: __init__.py  downloader.py
need_an_image/engines/: __init__.py  bing.py
need_an_image/utils/: store.py
src/need_an_image/: __init__.py
src/need_an_image/engines/: bing.py
src/need_an_image/utils/: decorators.py
tests/functional/: test_need_image_from.py  test_one_image_from.py
tests/unit/: test_downloaders.py  test_engines.py  test_need_an_image.py  test_one_image_from.py  test_utils.py
