[metadata]
name = i-need-an-image
version = 0.3.3
author = Wen Liang
author_email = wenslife@outlook.com
description = Download only one image from web
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/RyouMon/i-need-an-image
project_urls =
    Bug Tracker = https://github.com/RyouMon/i-need-an-image/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = need_an_image
python_requires = >=3.6
